# Tanzanite

./: .gitignore  LICENSE  Makefile.am  README.md  Tanzanite  configure.ac  go.mod  go.sum  main.go  out  prepare_clangd.sh
analyzer/: analyzer.go  assignment.go  conditions.go  loops.go
ast/: ast.go  stringify.go
ccg/: README.md  __bootstrap.c  ccg.go
debug/: debug.go
env/: env.go
include/: analyzer.h  ast.h  codegen.h  djb2.h  hash.h  queue.h  stack.h  str.h  str_builder.h  tokens.h
include/analyzer/: conditions.h  context.h  function.h  loops.h  operation.h  type.h  value.h  variable.h
include/hash/: function_store.h  type_store.h  var_store.h
include/queue/: function_call_queue.h
lexer/: lexer.go
parser/: conditions.go  functions.go  loops.go  operators.go  parser.go  types.go  utils.go  vars.go
reader/: reader.go
src/: analyzer.c  ast.c  codegen.c  djb2.c  lexer.l  main.c  parser.y  str.c  str_builder.c  tokens.c
src/hash/: function_store.c  type_store.c  var_store.c
src/queue/: function_call_queue.c
test/: test.tzn
tokens/: tokens.go
